--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,5 +26,6 @@
         path: /etc/dropbear-initramfs/config
         insertafter: "^#DROPBEAR_OPTIONS="
         line: "DROPBEAR_OPTIONS='{{ dropbear_initramfs_options }}'"
+        create: true
       when: dropbear_initramfs_options | length > 0
       notify: Update initramfs
