Set permissions on config file

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,5 +27,6 @@
         insertafter: "^#DROPBEAR_OPTIONS="
         line: "DROPBEAR_OPTIONS='{{ dropbear_initramfs_options }}'"
         create: true
+        mode: 0644
       when: dropbear_initramfs_options | length > 0
       notify: Update initramfs
